# CodeProject

dependency/lib-mine/: CMakeLists.txt
dependency/lib-mine/libConhash/: CMakeLists.txt  ReadMe.txt  UpgradeLog.htm  libConhash.sln  libConhash.vcproj  libConhash.vcxproj  libConhash.vcxproj.filters
dependency/lib-mine/libConhash/Backup/: libConhash.sln
dependency/lib-mine/libJsonc/: CMakeLists.txt  ReadMe.txt  UpgradeLog.htm  libJsonc.sln  libJsonc.vcproj  libJsonc.vcxproj  libJsonc.vcxproj.filters
dependency/lib-mine/libJsonc/Backup/: libJsonc.sln
dependency/lib-mine/libJsonc/include/: json_object.h  json_object.h~
dependency/lib-mine/libJsonc/src/: json_tokener.cpp  json_util.cpp  printbuf.cpp
dependency/lib-mine/libMySql/linux/: CMakeLists.txt  libMySql.sln  libMySql.vcproj
dependency/lib-mine/libMySql/linux/sdk/include/: my_config.h
dependency/lib-mine/libMySql/linux/src/: database.cpp  dbsqlbuilder.cpp  dbstatement.cpp
dependency/lib-mine/libMySql/win/: CMakeLists.txt  ReadMe.txt  UpgradeLog.htm  libMySql.sln  libMySql.vcproj  libMySql.vcxproj  libMySql.vcxproj.filters
dependency/lib-mine/libMySql/win/Backup/: libMySql.sln
dependency/lib-mine/libMySql/win/include/: mysqltype.h
dependency/lib-mine/libMySql/win/sdk/include/: my_config.h  mysql_version.h
dependency/lib-mine/libMySql/win/sdk/lib/: libmysql_X64.lib
dependency/lib-mine/libMySql/win/src/: database.cpp  dbresult.cpp  dbstatement.cpp
dependency/lib-mine/libNet/: CMakeLists.txt  ReadMe.txt  UpgradeLog.htm  libNet.sln  libNet.vcproj  libNet.vcxproj  libNet.vcxproj.filters
dependency/lib-mine/libNet/Backup/: libNet.sln
dependency/lib-mine/libNet/include/: input_stream.h  socket.h  socket_api.h  socket_stream.h  socketdef.h
dependency/lib-mine/libNet/src/: input_stream.cpp  output_stream.cpp  socket.cpp  socket_api.cpp  socket_client.cpp  socket_server.cpp  socket_stream.cpp
dependency/lib-third/: log4cplus-1.0.3-rc9.tar.bz2  mysql.txt  openssl-curl.txt
frame/cpp_reflect/: cppreflect.sln
frame/cpp_reflect/Backup/: cppreflect.sln
frame/cpp_reflect/include/: Archive.h  BuiltinType.h  BuiltinTypeImpl.h  ClassType.h  ClassTypeImpl.h  Factory.h  Field.h  FieldImpl.h  MembDataPtr.h  Method.h  MethodImpl.h  ObjHolder.h  PointerType.h  Reflect.h  Serialize.h  Singleton.h  StaticReflect.h  StringType.h  Type.h  TypeOf.h  TypeRegistry.h  UpCaster.h
frame/cpp_reflect/lib/: cppreflect.lib
frame/cpp_reflect/src/: Archive.cpp  BuiltinType.cpp  ClassType.cpp  Field.cpp  Method.cpp  PointerType.cpp  Serialize.cpp  StringType.cpp  Type.cpp  TypeOf.cpp  (+4 more)
frame/http_service/: agreement.cpp  agreement.h  http_service.cpp  http_service.h  main.cpp  worker.cpp  worker.h
frame/pluma/: Makefile  version
frame/tcp_service/: main.cpp
msvc/CodeProject/: CMakeLists.txt  CodeProject-2008.sln  CodeProject-2008.vcproj  CodeProject.sln  CodeProject.vcxproj  CodeProject.vcxproj.filters  UpgradeLog.htm
msvc/HttpServer/: CMakeLists.txt  HttpServer.sln  HttpServer.vcproj  HttpServer.vcxproj  HttpServer.vcxproj.filters  UpgradeLog.htm
msvc/HttpServer/Backup/: HttpServer.sln
msvc/ShareMemory/ShareMemory/: CMakeLists.txt  ShareMemory.sln  ShareMemory.vcproj  ShareMemory.vcxproj  ShareMemory.vcxproj.filters  UpgradeLog.htm
msvc/ShareMemory/ShareMemory/Backup/: ShareMemory.sln
msvc/TcpServer/: CMakeLists.txt  TcpServer.sln  TcpServer.vcproj
msvc/TcpSocketCS/TcpSocketClient/: CMakeLists.txt  TcpSocketClient.sln  TcpSocketClient.vcproj  TcpSocketClient.vcxproj  TcpSocketClient.vcxproj.filters  UpgradeLog.htm
msvc/TcpSocketCS/TcpSocketClient/Backup/: TcpSocketClient.sln
src/algorithm/: allocator.h  compress.cpp  compress.h  find.h  maths.cpp  maths.h  mcAlloc.h  mcCRC.h  mcFuncDef.h  mcGBCode.h  mcHilbert.h  mcMTL.h  mcMath.h  mcSort.h  mcStd.h  mcStr.h  md5.cpp  partition.h  sort.h
src/common/: macrodef.h  type.h
src/container/: 4-string.cpp  4-string.h  array.cpp  array.h  hash_table.h  linearTable.cpp  linearTable.h  list.h  matrix.cpp  matrix.h  mcBHeap.h  mcHash.h  queue.cpp  queue.h  rbtree.h  stack.cpp  stack.h
src/demo/: test_algorithm.cpp  test_algorithm.h  test_allocator.cpp  test_allocator.h  test_anyobj.cpp  test_anyobj.h  test_bitset.cpp  test_bitset.h  test_boost.cpp  test_boost.cpp~  test_boost.h  test_cbfunc.cpp  test_cbfunc.h  test_conhash.cpp  test_conhash.h  test_container.cpp  test_container.h  test_datastruct.cpp  test_datastruct.h  test_designpattern.cpp  test_designpattern.h  test_dictionary.cpp  test_dictionary.h  test_httpclient.cpp  test_httpclient.h  test_inireader.cpp  test_inireader.h  test_jconfig.cpp  test_jconfig.h  test_jsonc.cpp  test_jsonc.h  test_log4cplus.cpp  test_log4cplus.h  test_maths.cpp  test_maths.h  test_mysql.cpp  test_mysql.h  test_reflect.cpp  test_reflect.h  test_reflectV2.cpp  (+24 more)
src/filereader/: file_utils.cpp  file_utils.h
src/json_php_serializer/: array_merge.cpp  exception.h  format.h  iarray.h  iserialize.h  object-inl.h  object.cpp  object.h  serialize.h
src/main/: main.cpp  ssample.cpp  ssample.h
src/pattern/: factory.cpp  factory.h  factory_abstract.cpp  factory_abstract.h  factory_method.cpp  factory_method.h  observer.cpp  observer.h  singleton.h  state.cpp  state.h  strategy.cpp  strategy.h  tpl_method.cpp  tpl_method.h  work.cpp  work.h
src/reflect/: tClass.cpp  tClass.h  tKernel.cpp  tKernel.h  tNode.cpp  tNode.h
src/simple_reflect/: property.cpp  property.h  property_set.cpp  property_set.h  simple_reflect.h
src/ucs/: async_invoke.cpp  async_invoke.h  event_watcher.cpp  event_watcher.h  threadpool.cpp  threadpool.h
src/util/: any_obj.h  assert.cpp  assert.h  baselock.h  bitflags.h  bitset.h  cbfunc.h  condition.cpp  condition.h  helper.cpp  helper.h  http_client.cpp  http_client.h  lock.h  log.cpp  log.cpp~  log.h  log4cplus.cpp  log4cplus.h  memory_stat.cpp  memory_stat.h  msg_queue.cpp  msg_queue.h  mutex.cpp  mutex.h  myassert.cpp  myassert.h  p2pmsg.h  p2ptask.cpp  p2ptask.h  safe_ptr.h  seh_file.cpp  seh_file.h  shared_ptr.h  string_util.cpp  string_util.h  task.h  thread.cpp  thread.h  time_system.cpp  (+6 more)
(+268 files in other folders)
